# shared-ws

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: frame_ingest.rs  inbound_json.rs
docs/: README.md
docs/architecture/: architecture.md  json_parse_modes.md  latency_policy_hooks.md  pluggable_pingpong.md  reconnection_guide.md  self_healing.md
examples/: basic_connect.rs  bybit_trade_batch_logger.rs  candle_aggregation.rs
examples-ws/: Cargo.toml  README.md
examples-ws/examples/: bybit_trade_batch_logger.rs
examples-ws/src/: coordinator.rs
examples-ws/src/endpoints/: deribit.rs
examples-ws/tests/: deribit_public_flow.rs
examples/e2e/: Cargo.toml
examples/e2e/src/: coordinator.rs  lib.rs
examples/e2e/src/endpoints/: deribit.rs
examples/e2e/tests/: deribit_public_flow.rs
spec/: DELEGATED_REPLY_WS.md
sprints/DELEGATED_REPLY_WS/: README.md  sprint_1.md  sprint_2.md  sprint_3.md  sprint_4.md
src/: client.rs  fixture.rs  fixture_policy.rs  lib.rs  supervision.rs  testing.rs  tls.rs
src/core/: circular_buffer.rs  connection_policy.rs  frame.rs  global_rate_limit.rs  health.rs  mod.rs  ping.rs  rate_limit.rs  reconnect.rs  types.rs
src/transport/: mod.rs  tungstenite.rs
src/ws/: actor.rs  delegated.rs  delegated_pending.rs  health.rs  managed.rs  mod.rs  ping.rs  rate_limit.rs  runtime.rs  types.rs  writer.rs
tests/: auth_gated_mock_e2e.rs  connect_idempotency.rs  delegated_reply_sprint1.rs  delegated_reply_sprint2.rs  mock_test_utils.rs  outbound_drain_no_limiter.rs  state_recovery.rs  wait_for_writer.rs  zero_copy.rs
