[package]
name = "defi-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1.6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
hdrhistogram = "7.5"
http = "1"
kameo = { git = "https://github.com/moofone/kameo", features = ["remote"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
sonic-rs = { version = "0.5.6", features = ["arbitrary_precision"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "net", "rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "connect"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
