[package]
name = "shared-ws"
version = "0.1.4"
edition = "2024"
rust-version = "1.88"
description = "High-performance WebSocket infrastructure built around an actor-managed connection lifecycle, with transport and protocol logic cleanly separated."
license = "MIT OR Apache-2.0"
repository = "https://github.com/moofone/shared-ws"
readme = "README.md"

[dependencies]
anyhow = "1"
bytes = "1.6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
hdrhistogram = "7.5"
http = "1"
kameo = { git = "https://github.com/moofone/kameo.git", branch = "main", default-features = false, features = ["tracing"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
sonic-rs = "0.5.6"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "net", "rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "connect"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lexical-core = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "inbound_json"
harness = false

[[bench]]
name = "frame_ingest"
harness = false

[profile.bench]
# Benchmarks are specifically used to validate micro-optimizations; reduce codegen overhead.
lto = "thin"
codegen-units = 1

[workspace]
resolver = "2"
members = [".", "examples/e2e"]
