[package]
name = "shared-ws"
version = "0.1.4"
edition = "2024"
rust-version = "1.88"
description = "High-performance runtime-agnostic WebSocket infrastructure with transport and protocol logic cleanly separated."
license = "MIT OR Apache-2.0"
repository = "https://github.com/moofone/shared-ws"
readme = "README.md"

[dependencies]
bytes = "1.6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
hdrhistogram = "7.5"
http = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
serde_json = "1"
sonic-rs = "0.5.6"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "net", "rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "connect"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lexical-core = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "inbound_json"
harness = false

[[bench]]
name = "frame_ingest"
harness = false

[profile.bench]
# Benchmarks are specifically used to validate micro-optimizations; reduce codegen overhead.
lto = "thin"
codegen-units = 1

[workspace]
resolver = "2"
members = ["."]
