[package]
name = "examples-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1.6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
kameo = { git = "https://github.com/moofone/kameo", features = ["remote"] }
shared-ws = { git = "https://github.com/moofone/shared-ws" }
shared-rate_limiter = { git = "https://github.com/moofone/shared-rate_limiter" }
sonic-rs = "0.5.6"
tokio = { version = "1", features = ["sync", "time", "net", "rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "connect"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
